--- a/l10n/de_DE/LC_MESSAGES/messages.po
+++ b/l10n/de_DE/LC_MESSAGES/messages.po
@@ -2,9 +2,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LL\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-09 15:43+0100\n"
+"POT-Creation-Date: 2009-04-26 19:32+0100\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Pierre Schmitz <pschmitz@laber-land.de>\n"
+"Last-Translator: Pierre Schmitz <pierre@archlinux.de>\n"
 "Language-Team: Pierre Schmitz <pschmitz@laber-land.de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -16,170 +16,284 @@ msgstr ""
 "X-Poedit-KeywordsList: getText\n"
 "X-Poedit-SearchPath-0: ../../..\n"
 
-#: ../../../modules/L10n.php:125
+#: ../../../modules/L10n.php:97
+#, php-format
+msgid "%x"
+msgstr "%m.%d%Y"
+
+#: ../../../modules/L10n.php:102
+#, php-format
+msgid "%X"
+msgstr "%X"
+
+#: ../../../modules/L10n.php:107
+#, php-format
+msgid "%c"
+msgstr "%m.%d.%Y um %X"
+
+#: ../../../modules/L10n.php:123
 msgid "years"
 msgstr "Jahre"
 
-#: ../../../modules/L10n.php:130
+#: ../../../modules/L10n.php:128
 msgid "months"
 msgstr "Monate"
 
-#: ../../../modules/L10n.php:135
+#: ../../../modules/L10n.php:133
 msgid "weeks"
 msgstr "Wochen"
 
-#: ../../../modules/L10n.php:140
+#: ../../../modules/L10n.php:138
 msgid "days"
 msgstr "Tage"
 
-#: ../../../modules/L10n.php:145
+#: ../../../modules/L10n.php:143
 msgid "hours"
 msgstr "Stunden"
 
-#: ../../../modules/L10n.php:150
+#: ../../../modules/L10n.php:148
 msgid "minutes"
 msgstr "Minuten"
 
-#: ../../../modules/L10n.php:155
+#: ../../../modules/L10n.php:153
 msgid "seconds"
 msgstr "Sekunden"
 
-#: ../../../pages/Forums.php:121
-#: ../../../pages/Forums.php:122
-#: ../../../pages/Forums.php:263
-#: ../../../pages/Forums.php:264
-msgid "by"
-msgstr "von"
+#: ../../../pages/PrivatePostings.php:29
+msgid "Access denied!"
+msgstr "Zutritt verboten!"
 
-#: ../../../pages/Forums.php:165
-msgid "Forum"
-msgstr "Forum"
-
-#: ../../../pages/Forums.php:168
-msgid "Topics"
-msgstr "Themen"
-
-#: ../../../pages/Forums.php:171
-msgid "Posts"
-msgstr "Beiträge"
-
-#: ../../../pages/Forums.php:174
-msgid "Last post"
-msgstr "Letzter Beitrag"
-
-#: ../../../pages/Forums.php:180
-msgid "Who is online?"
-msgstr "Wer ist noch hier?"
-
-#: ../../../pages/Forums.php:194
-msgid "Index"
-msgstr "Übersicht"
-
-#: ../../../pages/Forums.php:274
-msgid "Private topics"
-msgstr "Private Themen"
-
-#: ../../../pages/Forums.php:275
-msgid "Discuss with other members in a private area."
-msgstr "Unterhalte Dich mit anderen Mitgliedern in einem privaten Bereich."
-
-#: ../../../pages/Threads.php:37
-msgid "No forum specified."
-msgstr "Kein Forum angegeben."
-
-#: ../../../pages/Threads.php:204
-msgid "Topic"
-msgstr "Thema"
-
-#: ../../../pages/Threads.php:205
-msgid "First post"
-msgstr "Erster Beitrag"
-
-#: ../../../pages/Threads.php:206
-msgid "Replies"
-msgstr "Antworten"
-
-#: ../../../pages/Threads.php:221
-#: ../../../pages/Threads.php:228
-msgid "Post new topic"
-msgstr "Neues Thema eröffnen"
-
-#: ../../../pages/Threads.php:278
-#: ../../../pages/Postings.php:225
-msgid "new"
-msgstr "neu"
-
-#: ../../../pages/Postings.php:35
+#: ../../../pages/PrivatePostings.php:38
+#: ../../../pages/Poll.php:36
 msgid "No topic specified."
 msgstr "Kein Thema angegeben."
 
-#: ../../../pages/Postings.php:84
-#: ../../../pages/Postings.php:148
+#: ../../../pages/PrivatePostings.php:76
 msgid "Topic not found."
 msgstr "Thema nicht gefunden."
 
-#: ../../../pages/Postings.php:236
-msgid "edited at"
-msgstr "bearbeitet am"
+#: ../../../pages/PrivatePostings.php:234
+msgid "Last edited"
+msgstr "Zuletzt bearbeitet"
 
-#: ../../../pages/Postings.php:240
-msgid "Last edited by"
-msgstr "Zuletzt bearbeitet von"
+#: ../../../pages/PrivatePostings.php:238
+#, php-format
+msgid "Last edited by %s"
+msgstr "Zuletzt bearbeitet von %s"
 
-#: ../../../pages/Postings.php:255
+#: ../../../pages/PrivatePostings.php:249
 msgid "Edit topic"
 msgstr "Thema bearbeiten"
 
-#: ../../../pages/Postings.php:255
-msgid "Edit tag"
-msgstr "Tag ändern"
-
-#: ../../../pages/Postings.php:258
-#: ../../../pages/Postings.php:371
-msgid "Delete topic"
-msgstr "Thema löschen"
-
-#: ../../../pages/Postings.php:268
+#: ../../../pages/PrivatePostings.php:255
 msgid "Edit post"
 msgstr "Beitrag bearbeiten"
 
-#: ../../../pages/Postings.php:271
-msgid "Delete post"
-msgstr "Beitrag löschen"
-
-#: ../../../pages/Postings.php:274
-msgid "Split topic"
-msgstr "Thema aufspalten"
-
-#: ../../../pages/Postings.php:277
-msgid "Move post"
-msgstr "Beitrag verschieben"
-
-#: ../../../pages/Postings.php:288
+#: ../../../pages/PrivatePostings.php:258
 msgid "Quote post"
 msgstr "Beitrag zitieren"
 
-#: ../../../pages/Postings.php:307
+#: ../../../pages/PrivatePostings.php:323
+msgid "Invite to private thread"
+msgstr "Zu privatem Thema einladen"
+
+#: ../../../pages/PrivatePostings.php:324
+msgid "Post reply"
+msgstr "Antwort schreiben"
+
+#: ../../../pages/PrivatePostings.php:327
+msgid "Delete topic"
+msgstr "Thema löschen"
+
+#: ../../../pages/PrivatePostings.php:337
+#: ../../../pages/PrivatePostings.php:359
+msgid "Pages"
+msgstr "Seiten"
+
+#: ../../../pages/PrivatePostings.php:342
+#: ../../../pages/PrivatePostings.php:350
+msgid "Posts"
+msgstr "Beiträge"
+
+#: ../../../pages/Forums.php:103
+#: ../../../pages/Forums.php:277
+msgid "Forum"
+msgstr "Forum"
+
+#: ../../../pages/Forums.php:104
+#: ../../../pages/Forums.php:278
+msgid "Topics"
+msgstr "Themen"
+
+#: ../../../pages/Forums.php:106
+#: ../../../pages/Forums.php:280
+msgid "Last post"
+msgstr "Letzter Beitrag"
+
+#: ../../../pages/Forums.php:130
+#: ../../../pages/Forums.php:266
+msgid "by"
+msgstr "von"
+
+#: ../../../pages/Forums.php:159
+msgid "Index"
+msgstr "Übersicht"
+
+#: ../../../pages/Forums.php:177
+msgid "Forum information"
+msgstr "Forum Informationen"
+
+#: ../../../pages/Forums.php:181
+msgid "Forum statistics"
+msgstr "Forum Statistiken"
+
+#: ../../../pages/Forums.php:183
+msgid "Total number of topics"
+msgstr "Gesamtzahl der Themen"
+
+#: ../../../pages/Forums.php:184
+msgid "Total number of posts"
+msgstr "Gesamtzahl der Beiträge"
+
+#: ../../../pages/Forums.php:188
+msgid "Online"
+msgstr "Online"
+
+#: ../../../pages/Forums.php:271
+#: ../../../pages/Forums.php:285
+msgid "Private topics"
+msgstr "Private Themen"
+
+#: ../../../pages/Forums.php:285
+msgid "Discuss with other members in a private area."
+msgstr "Unterhalte Dich mit anderen Mitgliedern in einem privaten Bereich."
+
+#: ../../../pages/SearchResults.php:38
+msgid "Neue Suche"
+msgstr ""
+
+#: ../../../pages/Threads.php:35
+msgid "No forum specified."
+msgstr "Kein Forum angegeben."
+
+#: ../../../pages/Threads.php:68
+msgid "Forum not found."
+msgstr "Forum nicht gefunden."
+
+#: ../../../pages/Threads.php:157
+msgid "Post new topic"
+msgstr "Neues Thema eröffnen"
+
+#: ../../../pages/Threads.php:159
+msgid "Mark forum as read"
+msgstr "Forum als gelesen markieren"
+
+#: ../../../pages/Postings.php:259
+msgid "Delete post"
+msgstr "Beitrag löschen"
+
+#: ../../../pages/Postings.php:262
+msgid "Split topic"
+msgstr "Thema aufspalten"
+
+#: ../../../pages/Postings.php:265
+msgid "Move post"
+msgstr "Beitrag verschieben"
+
+#: ../../../pages/Postings.php:295
 msgid "Recover post"
 msgstr "Beitrag wiederherstellen"
 
-#: ../../../pages/Postings.php:372
+#: ../../../pages/Postings.php:363
 msgid "Move topic"
 msgstr "Thema verschieben"
 
-#: ../../../pages/Postings.php:373
-msgid "Open topic"
-msgstr "Thema öffnen"
-
-#: ../../../pages/Postings.php:373
-msgid "Close topic"
-msgstr "Thema schließen"
-
-#: ../../../pages/Postings.php:374
+#: ../../../pages/Postings.php:365
 msgid "Stick topic"
 msgstr "Thema festsetzen"
 
-#: ../../../pages/Postings.php:376
-msgid "Post reply"
-msgstr "Antwort schreiben"
+#: ../../../pages/Postings.php:366
+msgid "Open topic"
+msgstr "Thema öffnen"
+
+#: ../../../pages/Postings.php:366
+msgid "Close topic"
+msgstr "Thema schließen"
+
+#: ../../../pages/Postings.php:598
+msgid "Abstimmen"
+msgstr ""
+
+#: ../../../pages/abstract/Page.php:144
+msgid "Search"
+msgstr "Suchen"
+
+#: ../../../pages/abstract/Page.php:150
+msgid "My profile"
+msgstr "Mein Profil"
+
+#: ../../../pages/abstract/Page.php:155
+msgid "Administration"
+msgstr ""
+
+#: ../../../pages/abstract/Page.php:158
+msgid "Logout"
+msgstr "Abmelden"
+
+#: ../../../pages/abstract/Page.php:163
+msgid "Register"
+msgstr "Registrieren"
+
+#: ../../../pages/abstract/Page.php:165
+msgid "Login"
+msgstr "Anmelden"
+
+#: ../../../pages/abstract/Page.php:199
+#: ../../../pages/abstract/Page.php:214
+msgid "Warning"
+msgstr "Warnung"
+
+#: ../../../pages/abstract/Page.php:207
+msgid "Failure"
+msgstr "Fehler"
+
+#: ../../../pages/abstract/Page.php:215
+msgid "no text"
+msgstr "kein Text"
+
+#: ../../../pages/abstract/Page.php:224
+msgid "Recent topics"
+msgstr "Aktuelle Themen"
+
+#: ../../../pages/abstract/Page.php:232
+msgid "New posts"
+msgstr "Neue Beiträge"
+
+#: ../../../pages/abstract/Page.php:237
+msgid "Mark all topics as read"
+msgstr "Alle Themen als gelesen markieren"
+
+#: ../../../pages/abstract/ThreadList.php:47
+#, php-format
+msgid "Topic %d to %d of %d"
+msgstr "Thema %d bis %d von %d"
+
+#: ../../../pages/abstract/ThreadList.php:67
+msgid "Topic"
+msgstr "Thema"
+
+#: ../../../pages/abstract/ThreadList.php:68
+msgid "Replies"
+msgstr "Antworten"
+
+#~ msgid "Who is online?"
+#~ msgstr "Wer ist noch hier?"
+#~ msgid "First post"
+#~ msgstr "Erster Beitrag"
+#~ msgid "new"
+#~ msgstr "neu"
+#~ msgid "edited at"
+#~ msgstr "bearbeitet am"
+#~ msgid "Edit tag"
+#~ msgstr "Tag ändern"
 
