--- a/TODO
+++ b/TODO
@@ -4,11 +4,10 @@ LL 4 TODO
 == Required for Release ==
 
 * use L10n-Methods for all (english) Strings
-* maybe reimplement simple generic crumb menu support
 * Layout/Design:
 	* <strong> allways needed?
-	* Form set/group as own class
 	* add method to set help text or description per form
+* isEmptyString fails on arrays
 
 == Optional ==
 
