--- a/TODO
+++ b/TODO
@@ -10,12 +10,13 @@ LL 4 TODO
 * isEmptyString fails on arrays
 * Cleanup Markup and convert posts
 * adapt new theme
-* move Privacy and Impressum to external sites
 * dfeine common translations
 * drop support for xcache
 * drop supprt for php < 5.3 (at least when its in extra)
 * review use of showFailure and showWarning
 * APC user var collision when running several instances on one server
+* Add/remove files is confusing
+* atm its not possible to remove files from a posting
 
 == Optional ==
 
